Hide overflow and prevent scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     margin: 10px;
     color: #143642;
     font-size: 35px;
+    overflow: hidden
 }
 
 .choices{
